--- a/material/src/main/resources/jdbc.properties
+++ b/material/src/main/resources/jdbc.properties
@@ -1,17 +1,19 @@
 jdbc.driver=com.mysql.jdbc.Driver
-#数据库地址
-jdbc.url=jdbc:mysql://192.168.154.129:3306/material?useUnicode=true&characterEncoding=utf8&useSSL=false
-#用户名
+#\u6570\u636E\u5E93\u5730\u5740
+#jdbc.url=jdbc:mysql://192.168.115.128:3306/material?useUnicode=true&characterEncoding=utf8&useSSL=false
+jdbc.url=jdbc:mysql://129.28.94.133:3306/material?useUnicode=true&characterEncoding=utf8&useSSL=false
+
+#\u7528\u6237\u540D
 jdbc.username=root
-#密码
+#\u5BC6\u7801
 jdbc.password=Mysql+123456
-#最大连接数
-c3p0.maxPoolSize=30
-#最小连接数
+#\u6700\u5927\u8FDE\u63A5\u6570
+c3p0.maxPoolSize=300
+#\u6700\u5C0F\u8FDE\u63A5\u6570
 c3p0.minPoolSize=10
-#关闭连接后不自动commit
+#\u5173\u95ED\u8FDE\u63A5\u540E\u4E0D\u81EA\u52A8commit
 c3p0.autoCommitOnClose=false
-#获取连接超时时间
+#\u83B7\u53D6\u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4
 c3p0.checkoutTimeout=10000
-#当获取连接失败重试次数
+#\u5F53\u83B7\u53D6\u8FDE\u63A5\u5931\u8D25\u91CD\u8BD5\u6B21\u6570
 c3p0.acquireRetryAttempts=2
