新建用户和新增物料增加部门信息

--- a/material/pom.xml
+++ b/material/pom.xml
@@ -186,7 +186,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>material</finalName>
+    <finalName>ROOT</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
